sparknation/src/css/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.btn-outline-primary {
  color: #8DCAFF;
  background-color: #00396A;
  border: 1px solid #8DCAFF;
  border-radius: 10px;
}

.btn-outline-primary:hover,
.btn-outline-primary:focus,
.btn-outline-primary:active {
  color: #DEF0FF;
  background-color: #D88100;
  border: 1px solid #D88100;
  border-radius: 10px;
}

.btn-outline-secondary {
  color: #8DCAFF;
  background-color: #00396A;
  border: 3px solid #8DCAFF;
  border-radius: 10px;
}

.btn-outline-secondary:hover,
.btn-outline-secondary:focus,
.btn-outline-secondary:active {
  color: #DEF0FF;
  background-color: #D88100;
  border: 3px solid #D88100;
  border-radius: 10px;
}

.btn-lg {
  padding: 5px 22px;
  font-size: 22px;
}

.btn-primary {
  color: #B1B1B1;
  background-color: #BCFBFF;
  border-radius: 5px;
  border: 0px;
  width: 278.4px;
  height: 178.11px;
  font-size : 30px
}

.btn-primary:hover,
.btn-primary:focus,
.btn-primary:active {
  color: #55463E;
  background-color: #FFD4BC;
  border-radius: 5px;
}

.btn-xl {
  text-align: left;
}

.top-buffer {
  margin-top: 20px;
}

.navbar-custom {
  background-color: #00396A;
}

input[type="text"],
input[type="text"]:focus,
select.form-control,
select.form-control:focus {
  background: transparent;
  border: none;
  border-bottom: 1px solid #8DCAFF;
  -webkit-box-shadow: none;
  box-shadow: none;
  border-radius: 0;
}

